Fixes #25 front page finished - Entered bullet point overview of conference - Adjusted menu bar to look good on medium size screens

--- a/design-notes.org
+++ b/design-notes.org
@@ -55,3 +55,30 @@ Between navigation and banner, occupy half of screen length
   
 
 
+
+* Index content
+- Seeking to bring together researchers working on problems in Non-Equilibrium
+  Systems in any discipline -- from the physical to the biological
+- Engage with the unifying ideas, methods, and challenges which characterise the
+  study of irreversible processes
+- Interact with a cross-disciplinary group of academics from King's College
+  London and beyond at our historic Strand campus in central London
+
+
+complex systems/ networks
+quantum dynamics
+stat mech
+protein folding
+
+** COMMENT previous year bullet points
+What are the common challenges in Non-Equilibrium Systems?
+What insights, methods and questions can be transferred between disciplines?
+
+CONES aims to provide a forum for fruitful interactions and discussions on unifying ideas, problems and questions
+
+Plenary sessions alongside thematic strands on non-equilibrium phenomena in the
+physical, biological and environmental sciences
+
+Join us at the beautiful central London venue of Goodenough College
+
+* Background content
