Sort out styles and enter same text as was used in 2016

--- a/design-notes.org
+++ b/design-notes.org
@@ -1,4 +1,4 @@
-* Image editing notes
+* Image editing notes :noexport:  
 ** Guidance on screen sizes to cater for
 https://www.hobo-web.co.uk/best-screen-size/
 
@@ -56,7 +56,7 @@ Between navigation and banner, occupy half of screen length
 
 
 
-* Index content
+* Index content :noexport:
 - Seeking to bring together researchers working on problems in Non-Equilibrium
   Systems in any discipline -- from the physical to the biological
 - Engage with the unifying ideas, methods, and challenges which characterise the
@@ -82,3 +82,39 @@ physical, biological and environmental sciences
 Join us at the beautiful central London venue of Goodenough College
 
 * Background content
+[[https://cnes.kcl.ac.uk][Center for Non-Equilibrium Science]] 
+
+** Non-Equilibrium Systems
+*** What are non-equilibrium systems?
+How do we understand whether epidemics will spread, or predict the likelihood
+of extreme meteorological events? How do we optimize the design of
+nanoparticles to maximize efficiency in drug and gene delivery? How do we
+control heating in fast electronic devices, or understand how next generation
+solar cells might work? Can we detect whether a network of financial
+institutions is close to a crash? Can we predict the fate of cellular states in
+health and disease? These research challenges all relate to *non-equilibrium systems*. 
+
+
+Such systems are typically irreversible, e.g. because they dissipate energy
+persistently pumped in from the outside, or they age towards an equilibrium
+state that is never reached. They also frequently exhibit extreme events, such
+as cascades of collective failure or the thermally activated rare event of a
+drug molecule being released from a vesicle.
+
+*** Crossing discipline boundaries
+As the examples above show, the challenge of understanding non-equilibrium
+systems is central to a wide variety of problems across the spectrum of
+physical, mathematical, biological and environmental sciences. Significant
+advances will have to come from researchers capable of exploiting and enhancing
+these interdisciplinary links.
+
+*** CONES and CANES
+The mission of the EPSRC-funded Centre for Doctoral Training in
+Cross-Disciplinary Approaches to Non-Equilibrium Systems (CANES) is to train
+future research leaders in the understanding, control and design of systems far
+from equilibrium, based on rigorous training in theoretical modelling,
+simulation and data-driven analysis, and a breadth of awareness of common
+themes across disciplines. CANES also functions as a UK Centre of Excellence
+for the research and research user community, and a national and international
+hub in the area of non-equilibrium systems. As part of this agenda it organises
+the biennial CONES meetings.
